banner images uploads

--- a/contact.html
+++ b/contact.html
@@ -192,6 +192,62 @@
                                         </div>
                                     </div>
                                 </li>
+                                <!-- Domains Dropdown -->
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="domainsDropdown" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class=""></i> Domains
+                                    </a>
+                                    <div class="dropdown-menu mega-dropdown p-4" aria-labelledby="domainsDropdown"
+                                        role="menu">
+                                        <div class="mega-row d-flex flex-wrap align-items-start">
+                                            <!-- Left Info -->
+                                            <div class="mega-left pe-4">
+                                                <h4 class="mb-2 d-flex align-items-center">
+                                                    <img src="images1/logo-black.png" alt="Domains Logo" class="me-2"
+                                                        style="height:32px;">
+                                                    <i class=""></i>
+                                                    Find Your Perfect Domain
+                                                </h4>
+                                                <p class="mb-0">
+                                                    Secure your online identity with the perfect domain name.
+                                                    Register, transfer, and manage domains effortlessly.
+                                                </p>
+                                            </div>
+                                            <!-- Links -->
+                                            <div class="mega-links d-flex flex-wrap gap-4">
+                                                <div class="mega-col">
+                                                    <h6>
+                                                        <i class="bi bi-search text-dark me-2"></i>
+                                                        <a href="domain-register.html">Register Domain</a>
+                                                    </h6>
+                                                    <p class="mb-0">Find and register your perfect domain name.</p>
+                                                </div>
+                                                <div class="mega-col">
+                                                    <h6>
+                                                        <i class="bi bi-arrow-left-right text-dark me-2"></i>
+                                                        <a href="domain-transfer.html">Transfer Domain</a>
+                                                    </h6>
+                                                    <p class="mb-0">Transfer your domain to KZD Solutions easily.</p>
+                                                </div>
+                                                <div class="mega-col">
+                                                    <h6>
+                                                        <i class="bi bi-tags text-dark me-2"></i>
+                                                        <a href="domain-pricing.html">Domain Pricing</a>
+                                                    </h6>
+                                                    <p class="mb-0">View pricing for all domain extensions.</p>
+                                                </div>
+                                                <div class="mega-col">
+                                                    <h6>
+                                                        <i class="bi bi-globe text-dark me-2"></i>
+                                                        <a href="tld-extensions.html">TLD Extensions</a>
+                                                    </h6>
+                                                    <p class="mb-0">Browse all available domain extensions.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                     </div>
