--- a/domain-transfer.html
+++ b/domain-transfer.html
@@ -210,7 +210,7 @@
         </header>
         <!-- end header --> 
         <!-- start page title -->
-        <section class="pt-0 cover-background ipad-top-space-margin sm-pb-0" style="background-image:url('./images.jpeg');">
+        <section class="pt-0 cover-background ipad-top-space-margin sm-pb-0" style="background-image:url('./images1/domain-transfer.jpg');">
             <div class="shape-image-animation p-0 w-100 d-none d-md-block"> 
                 <svg xmlns="http://www.w3.org/2000/svg" widht="3000" height="400" viewBox="0 180 2500 200" fill="#ffffff"> 
                 <path class="st1" d="M 0 250 C 1200 400 1200 50 3000 250 L 3000 550 L 0 550 L 0 250">
@@ -277,12 +277,13 @@
                         
                         <div class="form-group">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="privacyProtection" checked>
+                                <input class="form-check-input me-2" type="checkbox" id="privacyProtection" checked>
                                 <label class="form-check-label" for="privacyProtection">
                                     Enable Privacy Protection (Recommended)
                                 </label>
                             </div>
                         </div>
+
                         
                         <button type="submit" class="btn btn-primary btn-lg w-100">
                             Start Transfer
