--- a/VpsHosting.html
+++ b/VpsHosting.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 
 <head>
-    <title>Cloud Hosting KZD Solutions | Innovative Business Experts in Durban</title>
+    <title>VPS Hosting KZD Solutions | Innovative Business Experts in Durban</title>
     <!-- 
             META tags
         -->
@@ -431,7 +431,7 @@
                                             <div class="mega-col">
                                                 <h6>
                                                     <i class="bi bi-people-fill text-dark me-2"></i>
-                                                    <a href="hosting.html">Shared Hosting</a>
+                                                    <a href="hosting.html">Web Hosting</a>
                                                 </h6>
                                                 <p class="mb-0">Simple and powerful hosting for everyone.</p>
                                             </div>
@@ -449,13 +449,13 @@
                                                 </h6>
                                                 <p class="mb-0">Power and flexibility when you need it.</p>
                                             </div>
-                                            <div class="mega-col">
+                                            <!-- <div class="mega-col">
                                                 <h6>
                                                     <i class="bi bi-wordpress text-dark me-2"></i>
                                                     <a href="wordpress.html">WordPress Hosting</a>
                                                 </h6>
                                                 <p class="mb-0">Optimized hosting for WordPress sites.</p>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -505,13 +505,13 @@
                                                 </h6>
                                                 <p class="mb-0">View pricing for all domain extensions.</p>
                                             </div>
-                                            <div class="mega-col">
+                                            <!-- <div class="mega-col">
                                                 <h6>
                                                     <i class="bi bi-globe text-dark me-2"></i>
                                                     <a href="tld-extensions.html">TLD Extensions</a>
                                                 </h6>
                                                 <p class="mb-0">Browse all available domain extensions.</p>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -690,7 +690,7 @@
                 <div class="vpsx-faq-q">What is VPS hosting?</div>
                 <div class="vpsx-faq-a">
                     VPS hosting provides dedicated resources in a virtualized environment, offering more control and
-                    performance compared to shared hosting.
+                    performance compared to web hosting.
                 </div>
             </div>
 
