--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js" lang="en">
     <head>
         <title>Contact Us | KZD Solutions Durban | Let’s Build Together</title>
@@ -191,7 +191,7 @@
                                                 <div class="mega-col">
                                                     <h6>
                                                         <i class="bi bi-people-fill text-dark me-2"></i>
-                                                        <a href="hosting.html">Shared Hosting</a>
+                                                        <a href="hosting.html">Web Hosting</a>
                                                     </h6>
                                                     <p class="mb-0">Simple and powerful hosting for everyone.</p>
                                                 </div>
@@ -209,13 +209,13 @@
                                                     </h6>
                                                     <p class="mb-0">Power and flexibility when you need it.</p>
                                                 </div>
-                                                <div class="mega-col">
+                                                <!-- <div class="mega-col">
                                                     <h6>
                                                         <i class="bi bi-wordpress text-dark me-2"></i>
                                                         <a href="wordpress.html">WordPress Hosting</a>
                                                     </h6>
                                                     <p class="mb-0">Optimized hosting for WordPress sites.</p>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
@@ -265,13 +265,13 @@
                                                     </h6>
                                                     <p class="mb-0">View pricing for all domain extensions.</p>
                                                 </div>
-                                                <div class="mega-col">
+                                                <!-- <div class="mega-col">
                                                     <h6>
                                                         <i class="bi bi-globe text-dark me-2"></i>
                                                         <a href="tld-extensions.html">TLD Extensions</a>
                                                     </h6>
                                                     <p class="mb-0">Browse all available domain extensions.</p>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
