--- a/domain-register.html
+++ b/domain-register.html
@@ -148,7 +148,7 @@
                                                 <div class="mega-col">
                                                     <h6>
                                                         <i class="bi bi-people-fill text-dark me-2"></i>
-                                                        <a href="hosting.html">Shared Hosting</a>
+                                                        <a href="hosting.html">Web Hosting</a>
                                                     </h6>
                                                     <p class="mb-0">Simple and powerful hosting for everyone.</p>
                                                 </div>
@@ -166,13 +166,13 @@
                                                     </h6>
                                                     <p class="mb-0">Power and flexibility when you need it.</p>
                                                 </div>
-                                                <div class="mega-col">
+                                                <!-- <div class="mega-col">
                                                     <h6>
                                                         <i class="bi bi-wordpress text-dark me-2"></i>
                                                         <a href="wordpress.html">WordPress Hosting</a>
                                                     </h6>
                                                     <p class="mb-0">Optimized hosting for WordPress sites.</p>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
@@ -222,13 +222,13 @@
                                                     </h6>
                                                     <p class="mb-0">View pricing for all domain extensions.</p>
                                                 </div>
-                                                <div class="mega-col">
+                                                <!-- <div class="mega-col">
                                                     <h6>
                                                         <i class="bi bi-globe text-dark me-2"></i>
                                                         <a href="tld-extensions.html">TLD Extensions</a>
                                                     </h6>
                                                     <p class="mb-0">Browse all available domain extensions.</p>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
@@ -314,42 +314,42 @@
                             <div class="tld-box" data-tld=".com">
                                 <span class="tld-domain">.com</span>
                                 <p class="tld-subtitle">Most Popular</p>
-                                <p class="tld-price">R338/yr</p>
+                                <p class="tld-price">R319/yr</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-6 mb-4">
                             <div class="tld-box" data-tld=".co.za">
                                 <span class="tld-domain">.co.za</span>
                                 <p class="tld-subtitle">South Africa</p>
-                                <p class="tld-price">R149/yr</p>
+                                <p class="tld-price">R99/yr</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-6 mb-4">
                             <div class="tld-box" data-tld=".net">
                                 <span class="tld-domain">.net</span>
                                 <p class="tld-subtitle">Networks</p>
-                                <p class="tld-price">R438/yr</p>
+                                <p class="tld-price">R299/yr</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-6 mb-4">
                             <div class="tld-box" data-tld=".org">
                                 <span class="tld-domain">.org</span>
                                 <p class="tld-subtitle">Organizations</p>
-                                <p class="tld-price">R438/yr</p>
+                                <p class="tld-price">R299/yr</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-6 mb-4">
                             <div class="tld-box" data-tld=".africa">
                                 <span class="tld-domain">.africa</span>
                                 <p class="tld-subtitle">African Focus</p>
-                                <p class="tld-price">R778/yr</p>
+                                <p class="tld-price">R189/yr</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-6 mb-4">
                             <div class="tld-box" data-tld=".joburg">
                                 <span class="tld-domain">.joburg</span>
                                 <p class="tld-subtitle">Johannesburg</p>
-                                <p class="tld-price">R438/yr</p>
+                                <p class="tld-price">R238/yr</p>
                             </div>
                         </div>
                     </div>
