--- a/hosting.html
+++ b/hosting.html
@@ -173,7 +173,6 @@
                             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                             <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                             <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-                            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                             
                             <!-- Hosting Dropdown -->
                             <li class="nav-item dropdown">
@@ -220,13 +219,13 @@
                                                 </h6>
                                                 <p class="mb-0">Power and flexibility when you need it.</p>
                                             </div>
-                                            <div class="mega-col">
+                                            <!-- <div class="mega-col">
                                                 <h6>
                                                     <i class="bi bi-wordpress text-dark me-2"></i>
                                                     <a href="wordpress.html">WordPress Hosting</a>
                                                 </h6>
                                                 <p class="mb-0">Optimized hosting for WordPress sites.</p>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -288,6 +287,8 @@
                                     </div>
                                 </div>
                             </li>
+                                                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+
                         </ul>
                         </div>
                     </div>
