--- a/about.html
+++ b/about.html
@@ -81,6 +81,20 @@
                 right: auto !important;
                 transform: translateX(-50%) !important;
             }
+
+                    /* Ensure dropdowns are always visible */
+            .dropdown-menu {
+                position: absolute !important; /* Ensure it is positioned relative to the dropdown */
+                top: 100%; /* Align below the toggle */
+                left: 0;
+                z-index: 1055 !important; /* Higher than other elements */
+                will-change: transform; /* Optimize rendering */
+            }
+
+            /* Prevent parent elements from hiding the dropdown */
+            .navbar, .container-fluid {
+                overflow: visible !important;
+            }
         </style>
     </head>
 
@@ -720,51 +734,7 @@
         <!-- navbar logo color change end -->
 
         <!-- hosting dropdown hover & mobile toggle script -->
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                const hostingDropdownItem = document.querySelector('.nav-item.dropdown');
-                if (!hostingDropdownItem) return;
+            <script src="js/dropdown.js"></script>
 
-                const toggleLink = hostingDropdownItem.querySelector('[data-bs-toggle="dropdown"]');
-
-                function openDropdown() {
-                    hostingDropdownItem.classList.add('show');
-                    const menu = hostingDropdownItem.querySelector('.mega-dropdown');
-                    if (menu) menu.classList.add('show');
-                    if (toggleLink) toggleLink.setAttribute('aria-expanded', 'true');
-                }
-
-                function closeDropdown() {
-                    hostingDropdownItem.classList.remove('show');
-                    const menu = hostingDropdownItem.querySelector('.mega-dropdown');
-                    if (menu) menu.classList.remove('show');
-                    if (toggleLink) toggleLink.setAttribute('aria-expanded', 'false');
-                }
-
-                function enableHoverBehaviour() {
-                    if (window.innerWidth >= 992) {
-                        hostingDropdownItem.addEventListener('mouseenter', openDropdown);
-                        hostingDropdownItem.addEventListener('mouseleave', closeDropdown);
-                    } else {
-                        hostingDropdownItem.removeEventListener('mouseenter', openDropdown);
-                        hostingDropdownItem.removeEventListener('mouseleave', closeDropdown);
-                    }
-                }
-
-                // On small screens, toggle via click (custom to allow animation inside collapsed menu)
-                toggleLink && toggleLink.addEventListener('click', function (e) {
-                    if (window.innerWidth < 992) {
-                        e.preventDefault();
-                        hostingDropdownItem.classList.toggle('show');
-                        const menu = hostingDropdownItem.querySelector('.mega-dropdown');
-                        if (menu) menu.classList.toggle('show');
-                        toggleLink.setAttribute('aria-expanded', hostingDropdownItem.classList.contains('show') ? 'true' : 'false');
-                    }
-                });
-
-                enableHoverBehaviour();
-                window.addEventListener('resize', enableHoverBehaviour);
-            });
-        </script>
     </body>
 </html>
