--- a/services.html
+++ b/services.html
@@ -132,6 +132,35 @@
                     right: auto !important;
                     transform: translateX(-50%) !important;
                 }
+
+                            /* Ensure dropdowns are always visible */
+            .dropdown-menu {
+                position: absolute !important; /* Ensure it is positioned relative to the dropdown */
+                top: 100%; /* Align below the toggle */
+                left: 0;
+                z-index: 1055 !important; /* Higher than other elements */
+                will-change: transform; /* Optimize rendering */
+            }
+
+            /* Prevent parent elements from hiding the dropdown */
+            .navbar, .container-fluid {
+                overflow: visible !important;
+            }
+
+                    /* Ensure dropdowns are always visible */
+            .dropdown-menu {
+                position: absolute !important; /* Ensure it is positioned relative to the dropdown */
+                top: 100%; /* Align below the toggle */
+                left: 0;
+                z-index: 1055 !important; /* Higher than other elements */
+                will-change: transform; /* Optimize rendering */
+            }
+
+            /* Prevent parent elements from hiding the dropdown */
+            .navbar, .container-fluid {
+                overflow: visible !important;
+            }
+        </style>
             </style>
     </head>
 
